# pdf-langchain

./: .gitignore  .koyeb.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.requirements  Dockerfile.uv  Dockerfile.uv-venv  README.md  docker-compose.yml  dump.rdb  env.example  koyeb.yaml  pyproject.toml  requirements.txt  test.py
app/chat/: chat.py  create_embeddings.py  score.py
app/chat/callbacks/: stream.py
app/chat/chains/: streamable.py  traceable.py
app/chat/llms/: chatopenai.py
app/chat/memories/: __init__.py  window_memory.py
app/chat/memories/histories/: sql_history.py
app/chat/tracing/: langfuse.py
app/chat/vector_stores/: pinecone.py
app/web/: __init__.py  hooks.py
app/web/db/: __init__.py
app/web/db/models/: conversation.py  pdf.py  user.py
app/web/tasks/: embeddings.py
app/web/views/: client_views.py  pdf_views.py
